# tessellate

./: README.md  pyproject.toml
src/tessellate/: cli.py  convert_images.py  generate_mosaic.py
